# vae

./: .gitignore  data.py  model.py  pyproject.toml  train.py  utils.py
config/: default.yaml
config/device/: auto.yaml
config/model/: cifar10.yaml  mnist.yaml
config/run/: cifar10.yaml
